Fixed numbers wrapping in the trade tables. #257

--- a/frontend/bootstrap-overwrites.styl
+++ b/frontend/bootstrap-overwrites.styl
@@ -38,3 +38,11 @@ select.input-lg
 
 form > .form-group:last-child
     margin-bottom: 0;
+
+.table thead>tr>th, 
+.table tbody>tr>th, 
+.table tfoot>tr>th, 
+.table thead>tr>td, 
+.table tbody>tr>td, 
+.table tfoot>tr>td
+    padding: 6px 8px
